[gd_scene load_steps=27 format=2]

[ext_resource path="res://entities/entity_player/entity_player.gd" type="Script" id=1]
[ext_resource path="res://libs/gt_entity_mover_2d/gt_topdown_entity_mover_2d/gt_topdown_entity_mover_2d.gd" type="Script" id=2]
[ext_resource path="res://components/topdown_controller/topdown_controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://libs/gt_state_machine/gt_state_machine.gd" type="Script" id=4]
[ext_resource path="res://entities/entity_player/assets/player.png" type="Texture" id=5]
[ext_resource path="res://libs/gt_state_machine/__gt_state_transition.gd" type="Script" id=6]
[ext_resource path="res://libs/gt_grouped_area_2d/gt_trigger_area_2d/gt_hurtbox_2d/gt_hurtbox_2d.gd" type="Script" id=7]
[ext_resource path="res://entities/entity_player/scripts/entity_player_base_state.gd" type="Script" id=8]
[ext_resource path="res://libs/gt_health/gt_health.gd" type="Script" id=9]
[ext_resource path="res://entities/entity_player/scripts/entity_player_equipment.gd" type="Script" id=10]
[ext_resource path="res://entities/entity_player/scripts/entity_player_bomb_manager.gd" type="Script" id=11]
[ext_resource path="res://components/entity_spawner/entity_spawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://entities/entity_bomb/entity_bomb.tscn" type="PackedScene" id=13]
[ext_resource path="res://libs/gt_input_controller/actions/__gt_input_action.gd" type="Script" id=14]
[ext_resource path="res://libs/gt_grouped_area_2d/gt_trigger_area_2d/gt_trigger_area_2d.gd" type="Script" id=15]
[ext_resource path="res://libs/gt_points/gt_points.gd" type="Script" id=16]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=17]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/visuals/graphics:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "died" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath("Timers/InvincibilityTimer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/visuals/graphics:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Body/Triggers/DamageHurtbox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_all_shapes"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/visuals/graphics:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/visuals/graphics:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Body/Triggers/DamageHurtbox")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_all_shapes"
} ]
}

[node name="Player" type="Node2D"]
script = ExtResource( 1 )
entity_type = 1

[node name="InputController" parent="." instance=ExtResource( 3 )]

[node name="bomb" type="Node" parent="InputController"]
script = ExtResource( 14 )
action = "act_bomb"

[node name="remote" type="Node" parent="InputController"]
script = ExtResource( 14 )
action = "act_remote"

[node name="Stats" type="Node" parent="."]

[node name="Health" type="Node" parent="Stats"]
script = ExtResource( 9 )
max_health = 6
initial_health = 6

[node name="Money" type="Node" parent="Stats"]
script = ExtResource( 16 )

[node name="Equipment" type="Node" parent="Stats"]
script = ExtResource( 10 )
bomb_fuse_time = 2.5

[node name="BombManager" type="Node2D" parent="."]
script = ExtResource( 11 )
_player_path = NodePath("..")
_body_path = NodePath("../Body")
_equipment_path = NodePath("../Stats/Equipment")

[node name="Spawner" parent="BombManager" instance=ExtResource( 12 )]
_actor_path = NodePath("../..")
_entity_template = ExtResource( 13 )
is_independent_entity = true

[node name="Cooldown" type="Timer" parent="BombManager"]
one_shot = true

[node name="Timers" type="Node" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="Body" type="KinematicBody2D" parent="." groups=[
"entity_player_body",
]]
collision_layer = 32
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="visuals" type="Node2D" parent="Body"]
__meta__ = {
"_edit_lock_": true
}

[node name="graphics" type="Node2D" parent="Body/visuals"]
__meta__ = {
"_edit_lock_": true
}

[node name="main" type="Sprite" parent="Body/visuals/graphics"]
position = Vector2( 0, -8 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="bomb_origin" type="Position2D" parent="Body"]
position = Vector2( 0, -6 )
__meta__ = {
"_edit_lock_": true
}

[node name="visited_points" type="Line2D" parent="Body/bomb_origin"]
position = Vector2( 0, 6 )
width = 0.0
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}
lifetime = 0.01

[node name="CollisionShape" type="CollisionShape2D" parent="Body"]
visible = false
position = Vector2( 0, -4 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Triggers" type="Node2D" parent="Body"]
__meta__ = {
"_edit_lock_": true
}

[node name="DamageHurtbox" type="Area2D" parent="Body/Triggers" groups=[
"entity_player_damage_hurtbox",
]]
visible = false
collision_layer = 16
collision_mask = 16
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}
_entity_path = NodePath("../../..")
_body_path = NodePath("../..")
collidable_groups = [ "entity_enemy_damage_hitbox", "entity_explosion_damage_hitbox" ]

[node name="CollisionShape" type="CollisionShape2D" parent="Body/Triggers/DamageHurtbox"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollectibleTrigger" type="Area2D" parent="Body/Triggers" groups=[
"entity_player_collectible_trigger",
]]
visible = false
collision_layer = 8
collision_mask = 8
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}
_entity_path = NodePath("../../..")
_body_path = NodePath("../..")
collidable_groups = [ "entity_collectible_collectible_trigger" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Triggers/CollectibleTrigger"]
position = Vector2( 0, -4 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="PickupTrigger" type="Area2D" parent="Body/Triggers" groups=[
"entity_player_pickup_trigger",
]]
visible = false
collision_layer = 8
collision_mask = 8
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}
_entity_path = NodePath("../../..")
_body_path = NodePath("../..")
collidable_groups = [ "entity_pickup_pickup_trigger" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Triggers/PickupTrigger"]
position = Vector2( 0, -4 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="EntityMover" type="Node" parent="Body"]
script = ExtResource( 2 )
body_path = NodePath("..")
movement_mode = 2
max_velocity = 28
move_acceleration_time = 0.05
move_deceleration_time = 0.05

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
_entity_path = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
_fsm_path = NodePath("..")
_enter_animation_player_path = NodePath("../../Enter")
_exit_animation_player_path = NodePath("../../Exit")
anim_name_on_enter = "idle_enter"
play_on_enter = true
can_place_bombs = true
can_detonate_bombs = true

[node name="ToMove" type="Node" parent="StateMachine/Idle"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Move")

[node name="ToHurt" type="Node" parent="StateMachine/Idle"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Hurt")

[node name="ToDead" type="Node" parent="StateMachine/Idle"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Dead")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
_fsm_path = NodePath("..")
_enter_animation_player_path = NodePath("../../Enter")
_exit_animation_player_path = NodePath("../../Exit")
anim_name_on_enter = "move_enter"
play_on_enter = true
can_place_bombs = true
can_detonate_bombs = true

[node name="ToIdle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Idle")

[node name="ToHurt" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Hurt")

[node name="ToDead" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Dead")

[node name="Kick" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
_fsm_path = NodePath("..")
_enter_animation_player_path = NodePath("../../Enter")
_exit_animation_player_path = NodePath("../../Exit")
can_move = false

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
_fsm_path = NodePath("..")
_enter_animation_player_path = NodePath("../../Enter")
_exit_animation_player_path = NodePath("../../Exit")
anim_name_on_enter = "hurt_enter"
anim_name_on_exit = "hurt_exit"
play_on_enter = true
play_on_exit = true
can_place_bombs = true
can_detonate_bombs = true

[node name="ToIdle" type="Node" parent="StateMachine/Hurt"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Idle")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
_fsm_path = NodePath("..")
_enter_animation_player_path = NodePath("../../Enter")
_exit_animation_player_path = NodePath("../../Exit")
anim_name_on_enter = "dead_enter"
play_on_enter = true
can_move = false

[node name="Enter" type="AnimationPlayer" parent="."]
anims/dead_enter = SubResource( 5 )
anims/hurt_enter = SubResource( 6 )
anims/idle_enter = SubResource( 7 )
anims/move_enter = SubResource( 8 )

[node name="Exit" type="AnimationPlayer" parent="."]
anims/hurt_exit = SubResource( 9 )

[connection signal="collected_heart" from="." to="Stats/Health" method="gain_health" binds= [ 1 ]]
[connection signal="collected_money" from="." to="Stats/Money" method="gain_points"]
[connection signal="took_damage" from="." to="StateMachine/Move" method="_on_Player_took_damage"]
[connection signal="took_damage" from="." to="StateMachine/Idle" method="_on_Player_took_damage"]
[connection signal="updated_move_direction" from="InputController" to="StateMachine/Hurt" method="_on_InputController_updated_move_direction"]
[connection signal="updated_move_direction" from="InputController" to="StateMachine/Move" method="_on_InputController_updated_move_direction"]
[connection signal="updated_move_direction" from="InputController" to="StateMachine/Idle" method="_on_InputController_updated_move_direction"]
[connection signal="just_pressed" from="InputController/bomb" to="StateMachine/Hurt" method="_on_bomb_just_pressed"]
[connection signal="just_pressed" from="InputController/bomb" to="StateMachine/Move" method="_on_bomb_just_pressed"]
[connection signal="just_pressed" from="InputController/bomb" to="StateMachine/Idle" method="_on_bomb_just_pressed"]
[connection signal="just_pressed" from="InputController/remote" to="StateMachine/Hurt" method="_on_remote_just_pressed"]
[connection signal="just_pressed" from="InputController/remote" to="StateMachine/Move" method="_on_remote_just_pressed"]
[connection signal="just_pressed" from="InputController/remote" to="StateMachine/Idle" method="_on_remote_just_pressed"]
[connection signal="died" from="Stats/Health" to="StateMachine/Idle/ToDead" method="do_transition"]
[connection signal="died" from="Stats/Health" to="StateMachine/Move/ToDead" method="do_transition"]
[connection signal="lived" from="Stats/Health" to="StateMachine/Move/ToHurt" method="do_transition"]
[connection signal="lived" from="Stats/Health" to="StateMachine/Idle/ToHurt" method="do_transition"]
[connection signal="gained_ammo" from="Stats/Equipment" to="BombManager" method="recover_ammo"]
[connection signal="timeout" from="Timers/InvincibilityTimer" to="StateMachine/Hurt/ToIdle" method="do_transition"]
[connection signal="took_damage" from="Body/Triggers/DamageHurtbox" to="." method="_on_DamageHurtbox_took_damage"]
[connection signal="grouped_area_entered" from="Body/Triggers/CollectibleTrigger" to="." method="_on_CollectibleTrigger_grouped_area_entered"]
[connection signal="grouped_area_entered" from="Body/Triggers/PickupTrigger" to="Stats/Equipment" method="_on_PickupTrigger_grouped_area_entered"]
[connection signal="bomb_just_pressed" from="StateMachine/Idle" to="BombManager" method="place_bomb"]
[connection signal="remote_just_pressed" from="StateMachine/Idle" to="BombManager" method="detonate_bomb"]
[connection signal="started_moving" from="StateMachine/Idle" to="StateMachine/Idle/ToMove" method="do_transition"]
[connection signal="bomb_just_pressed" from="StateMachine/Move" to="BombManager" method="place_bomb"]
[connection signal="remote_just_pressed" from="StateMachine/Move" to="BombManager" method="detonate_bomb"]
[connection signal="stopped_moving" from="StateMachine/Move" to="StateMachine/Move/ToIdle" method="do_transition"]
[connection signal="bomb_just_pressed" from="StateMachine/Hurt" to="BombManager" method="place_bomb"]
[connection signal="remote_just_pressed" from="StateMachine/Hurt" to="BombManager" method="detonate_bomb"]
